# VibeKeeper

./: .detoxrc.json  .gitignore  .swiftlint.yml  App.js  CLAUDE.md  IMPLEMENTATION_PROGRESS.md  README.md  Readme.md  app.json  babel.config.js  go.mod  index.js  jest.config.integration.js  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  roadmap.md  run.txt  tailwind.config.js  tsconfig.json
.claude/: README.md  TOOLS.md  TOOLS_TEST_REPORT.md  settings.json  settings.local.json
.claude/agents/: code-flow-mapper.md  code-reviewer.md  investigator.md  planner.md
.claude/commands/: commit.md  dev.md  task.md
VibeKeeper/: ContentView.swift  TestView.swift  VibeKeeperApp.swift
VibeKeeper.xcodeproj/: project.pbxproj
VibeKeeperTests/: VibeKeeperTests.swift
VibeKeeperUITests/: VibeKeeperUITests.swift  VibeKeeperUITestsLaunchTests.swift
__tests__/: README.md
archive/: .gitignore  README.md  run.txt
claude/: CLAUDE.md  README.md
docs/: ARCHITECTURE.md  DETOX_SETUP.md  ERROR_LOG.md  GITHUB_ISSUES_GUIDE.md  Go-extra.txt  IMPLEMENTATION_PROGRESS.md  JOURNAL.md  LOGGING_SYSTEM.md  README.md  UI_UX_DESIGN.md  VibeKeeper-spec.md  VibeKeeper.md  Vue-Nuxt-guide.md  build-fixes.md  development-guide.md  foundation-plan.md  implementation-phase2.md  implementation-phase3.md  implementation.md  mini-mvp-checklist.md  progress-report.md  progress.md  prompt.xml  status-report.txt  web-mvp-plan.md
mini-mvp/: .env.example  .gitignore  README.md  ai_extractor.py  main.py  models.py  pyproject.toml  requirements.txt  run.txt
mini-mvp/backend/: .env.example  ai_extractor.py  auth.py  config.py  database.py  main.py  models.py  pyproject.toml
mini-mvp/backend/api/: __init__.py  auth.py  occasions.py
(+128 files in other folders)
