[project]
name = "vibekeeper-backend"
version = "0.1.0"
description = "VibeKeeper AI-powered occasion tracking backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.3",
    "sqlalchemy>=2.0.41",
    "aiosqlite>=0.21.0",
    "litellm>=1.72.6",
    "pydantic>=2.10.4",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
    "faker>=34.0.0",
]

[dependency-groups]
dev = [
    "faker>=37.4.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
